fixed sidebar width and aligned it to the left margin

--- a/styles/_carousel.scss
+++ b/styles/_carousel.scss
@@ -26,7 +26,7 @@
 
 .carousel-caption{
 	text-transform:none;
-	//background-color: rgba($red, 0.7);
+	text-shadow:none !important;
 	width: 282px;
 	height: 279px;
 	text-align: left;
@@ -42,7 +42,7 @@
 			background-color: rgba($turquoise, 0.8);
 		}
 		&.teal {
-			background-color: rgba($teal, 0.8);
+			background-color: rgba($teal, 0.85);
 		}
 		&.green {
 			background-color: rgba($green, 0.8);
