--- a/styles/speaking_partners.css
+++ b/styles/speaking_partners.css
@@ -355,6 +355,7 @@ body {
 #sidebar {
   position: relative;
   background-color: #d9d9d9;
+  border-right: solid white 20px;
   padding-left: 30px;
   padding-right: 30px;
 }
